tests/baselines/reference/parserComputedPropertyName17.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName17.ts(1,16): error TS2304: Cannot find name 'e'.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName17.ts (1 errors) ====
    var v = { set [e](v) { } }
                   ~
!!! error TS2304: Cannot find name 'e'.